--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: app_colabora_unimedjp
 description: "Colabora UnimedJP Beta"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -52,7 +52,7 @@ dependencies:
   animated_text_kit: ^4.2.3
   image_picker: ^1.2.0
   image_cropper: ^10.0.0+1
-  encrypt: ^5.0.3 
+  encrypt: ^5.0.3
   crypto: ^3.0.6
   flutter_local_notifications: ^19.4.2
   path_provider: ^2.1.5
@@ -67,8 +67,9 @@ dependencies:
   local_auth: ^2.3.0
   lottie: ^2.2.0
   in_app_update: ^4.2.5
-  sqflite: 
-  
+  sqflite: ^2.4.1
+  qr_flutter: ^4.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -85,7 +86,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -93,10 +93,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
-     - assets/animations/
-     - assets/svg/
-     - assets/fonts/
+    - assets/images/
+    - assets/animations/
+    - assets/svg/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
