--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   in_app_update: ^4.2.5
   sqflite: ^2.4.1
   qr_flutter: ^4.1.0
+  file_picker: ^10.3.10
+  syncfusion_flutter_pdfviewer: ^32.2.5
 
 dev_dependencies:
   flutter_test:
